k8s-hybris/k8s-solr/solr-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: solr
  labels:
    app: solr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solr # has to match .spec.template.metadata.labels
  template:
    metadata:
      labels:
        app: solr
    spec:
      containers:
      - args:
        - standalone
        image: pacteradeg/hybris-solr
        name: solr
        ports:
        - containerPort: 8983
        resources: {}
#        readinessProbe:
#          tcpSocket:
#            port: 8080
#          initialDelaySeconds: 5
#          periodSeconds: 10
#        livenessProbe:
#          tcpSocket:
#            port: 8080
#          initialDelaySeconds: 15
#          periodSeconds: 20
#        livenessProbe:
#          httpGet:
#            path: /minio/health/live
#            port: 9000
#          initialDelaySeconds: 120
#          periodSeconds: 20
#        readinessProbe:
#          httpGet:
#            path: /healthz
#            port: 80
#            httpHeaders:
#              - name: Host
#                value: KubernetesLivenessProbe
#          initialDelaySeconds: 20
        volumeMounts:
        - mountPath: /opt/solr-data
          name: hybris-solr-data
      volumes:
      - name: hybris-solr-data
        flexVolume:
          driver: ceph.rook.io/rook
          fsType: ceph
          options:
            fsName: minikube-fs
            clusterNamespace: rook-ceph
