k8s-hybris/k8s-solr/solr-master-statefulset.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  labels:
    app: solr-master
  name: solr-master
spec:
  serviceName: solr-master-service
  replicas: 1
  selector:
    matchLabels:
      app: solr-master # has to match .spec.template.metadata.labels
  template:
    metadata:
      labels:
        app: solr-master
    spec:
      containers:
      - args:
        - standalone
        image: pacteradeg/hybris-solr
        name: solr-master
        ports:
        - containerPort: 8983
        resources: {}
#        readinessProbe:
#          tcpSocket:
#            port: 8080
#          initialDelaySeconds: 5
#          periodSeconds: 10
#        livenessProbe:
#          tcpSocket:
#            port: 8080
#          initialDelaySeconds: 15
#          periodSeconds: 20
#        livenessProbe:
#          httpGet:
#            path: /minio/health/live
#            port: 9000
#          initialDelaySeconds: 120
#          periodSeconds: 20
#        readinessProbe:
#          httpGet:
#            path: /healthz
#            port: 80
#            httpHeaders:
#              - name: Host
#                value: KubernetesLivenessProbe
#          initialDelaySeconds: 20
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /opt/solr/server/solr/data
          name: hybris-solr-data
        - name: solr-config
          mountPath: /opt/solr/server/solr/configsets/default/conf/solrconfig.xml
          subPath: solrconfig.xml
      restartPolicy: Always
      volumes:
        - name: solr-config
          configMap:
            name: solr-master-config
  volumeClaimTemplates:
  - metadata:
      name: hybris-solr-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
      storageClassName: rook-ceph-block
