k8s-hybris/k8s-solr/solr-stateful- set.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
    traefik.backend: solr
    traefik.docker.network: b2c-minio_hybris
    traefik.enable: "true"
    traefik.frontend.entryPoints: http,https
    traefik.frontend.rule: Host:solr.local
    traefik.port: "8983"
    traefik.protocol: http
  creationTimestamp: null
  labels:
    io.kompose.service: solr
  name: solr
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: solr
    spec:
      containers:
      - args:
        - standalone
        image: 'pacteradeg/hybris-solr:'
        name: solr
        ports:
        - containerPort: 8983
        resources: {}
        volumeMounts:
        - mountPath: /opt/solr/server/solr
          name: hybris-solr-data
      hostname: solr
      restartPolicy: Always
      volumes:
      - name: hybris-solr-data
        persistentVolumeClaim:
          claimName: hybris-solr-data
status: {}
