k8s-hybris/k8s-solr/solr-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: solr-master
  name: solr-master
spec:
  type: ClusterIP
  ports:
  - name: solr-master-service
    port: 8983
    targetPort: 8983
    protocol: TCP
  selector:
    app: solr-master
