k8s-hybris/k8s-solr/solr-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
    traefik.backend: solr
    traefik.docker.network: b2c-minio_hybris
    traefik.enable: "true"
    traefik.frontend.entryPoints: http,https
    traefik.frontend.rule: Host:solr.local
    traefik.port: "8983"
    traefik.protocol: http
  creationTimestamp: null
  labels:
    io.kompose.service: solr
  name: solr
spec:
  ports:
  - name: "8983"
    port: 8983
    targetPort: 8983
  selector:
    io.kompose.service: solr
status:
  loadBalancer: {}
