k8s-hybris/k8s-solr/solr-slave-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: solr-slave
  name: solr-slave
spec:
  type: ClusterIP
  ports:
  - name: solr-slave-service
    port: 8983
    targetPort: 8983
    protocol: TCP
  selector:
    app: solr-slave
