k8s-hybris/k8s-solr/solr-master-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
#    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
#    traefik.ingress.kubernetes.io/redirect-entry-point: https
#    traefik.ingress.kubernetes.io/redirect-permanent: "true"
  name: solr-master
spec:
  rules:
  - host: solr-master.local
    http:
      paths:
      - path: /
        backend:
          serviceName: solr-master
          servicePort: 8983
